--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <body>
-Hi, Welcome!
-  Product Roadmap <a href='roadmap.html'>Road Map</a>
-  <iframe src="roadmap.html" title="Road Map"></iframe>
+  Author: Lok
+  Product Roadmap click <a href='roadmap.html'>Road Map</a>
 </body>
 </html>
